Add precommit hooks

--- a/environment.yaml
+++ b/environment.yaml
@@ -182,20 +182,26 @@ dependencies:
   - pip:
       - absl-py==2.1.0
       - antlr4-python3-runtime==4.9.3
+      - attrs==24.2.0
       - autograd==1.7.0
       - autograd-gamma==0.5.0
+      - black==24.8.0
       - braceexpand==0.1.7
       - certifi==2024.8.30
+      - cfgv==3.4.0
       - charset-normalizer==3.3.2
       - click==8.1.7
       - cmake==3.30.3
       - contourpy==1.3.0
       - cycler==0.12.1
+      - distlib==0.3.8
       - docker-pycreds==0.4.0
       - ecos==2.0.14
       - einops==0.8.0
       - fairscale==0.4.13
+      - fastjsonschema==2.20.0
       - filelock==3.15.4
+      - flake8==7.1.1
       - flash-attn==2.6.3
       - fonttools==4.53.1
       - formulaic==1.0.2
@@ -206,6 +212,7 @@ dependencies:
       - grpcio==1.66.1
       - h5py==3.11.0
       - huggingface-hub==0.20.2
+      - identify==2.6.1
       - idna==3.8
       - imageio==2.35.1
       - interface-meta==1.3.0
@@ -213,6 +220,8 @@ dependencies:
       - isort==5.13.2
       - jinja2==3.1.4
       - joblib==1.4.2
+      - jsonschema==4.23.0
+      - jsonschema-specifications==2023.12.1
       - kiwisolver==1.4.7
       - lazy-loader==0.4
       - lifelines==0.29.0
@@ -220,11 +229,15 @@ dependencies:
       - markdown==3.7
       - markupsafe==2.1.5
       - matplotlib==3.9.2
+      - mccabe==0.7.0
       - monai==1.3.2
       - mpmath==1.3.0
       - mypy-extensions==1.0.0
+      - nbformat==5.10.4
+      - nbstripout==0.7.1
       - networkx==3.3
       - ninja==1.11.1.1
+      - nodeenv==1.9.1
       - numexpr==2.10.1
       - numpy==1.26.4
       - nvidia-cublas-cu11==11.10.3.66
@@ -255,9 +268,13 @@ dependencies:
       - osqp==0.6.7.post1
       - packaging==23.2
       - pandas==2.2.2
+      - pathspec==0.12.1
       - pillow==10.4.0
       - portalocker==2.10.1
+      - pre-commit==3.8.0
       - protobuf==5.28.0
+      - pycodestyle==2.12.1
+      - pyflakes==3.2.0
       - pyparsing==3.1.4
       - pyre-extensions==0.0.23
       - python-dateutil==2.9.0.post0
@@ -265,8 +282,10 @@ dependencies:
       - pytz==2024.1
       - pyyaml==6.0.2
       - qdldl==0.1.7.post4
+      - referencing==0.35.1
       - regex==2024.7.24
       - requests==2.32.3
+      - rpds-py==0.20.0
       - safetensors==0.4.4
       - scikit-image==0.24.0
       - scikit-learn==1.5.1
@@ -285,6 +304,7 @@ dependencies:
       - tifffile==2024.8.30
       - timm==1.0.9
       - tokenizers==0.15.2
+      - tomli==2.0.1
       - torch==2.0.0
       - torchmetrics==0.10.3
       - torchvision==0.15.1
@@ -294,9 +314,11 @@ dependencies:
       - typing-inspect==0.9.0
       - tzdata==2024.1
       - urllib3==2.2.2
+      - virtualenv==20.26.5
       - wandb==0.17.9
       - webdataset==0.2.100
       - werkzeug==3.0.4
       - wrapt==1.16.0
       - xformers==0.0.18
+      - xgboost==2.1.1
       - yacs==0.1.8
