--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,28 +1,36 @@
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.3.0
+  -   repo: https://github.com/pre-commit/pre-commit-hooks
+      rev: v4.6.0
+      hooks:
+        - id: trailing-whitespace
+          types: [python]
+        - id: end-of-file-fixer
+          types: [python]         
+        - id: check-yaml
+  - repo: https://github.com/kynan/nbstripout
+    rev: 0.7.1
     hooks:
-    -   id: check-yaml
-    -   id: end-of-file-fixer
-    -   id: trailing-whitespace
-- repo: https://github.com/pycqa/isort
-  rev: 5.13.2
-  hooks:
-    - id: isort
-      name: isort (python)
-      args: [--line-length=79, --profile=black]
--   repo: https://github.com/psf/black
-    rev: 24.8.0
+      - id: nbstripout
+  - repo: https://github.com/pycqa/isort
+    rev: 5.13.2
     hooks:
-    -   id: black
-        args: [--line-length=79]
-    -   id: black-jupyter
-        args: [--line-length=79]
--   repo: https://github.com/PyCQA/flake8
-    rev: 7.1.1
-    hooks:
-    -   id: flake8
-- repo: https://github.com/kynan/nbstripout
-  rev: 0.7.1
-  hooks:
-    - id: nbstripout
+      - id: isort
+        name: isort (python)
+        args: [--line-length=79, --profile=black]
+  -   repo: https://github.com/psf/black
+      rev: 24.8.0
+      hooks:
+      -   id: black
+          args: [--line-length=79]
+      -   id: black-jupyter
+          args: [--line-length=79]
+  -   repo: https://github.com/PyCQA/flake8
+      rev: 7.1.1
+      hooks:
+      -   id: flake8
+
+# sets up .pre-commit-ci.yaml to ensure pre-commit dependencies stay up to date
+ci:
+  autoupdate_schedule: weekly
+  skip: []
+  submodules: false
